<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/AppThemeNoBackground"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:elevation="@dimen/margin_normal"
    android:minWidth="150dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/type_work"
        style="@style/phone_type_spinner"
        android:contentDescription="@string/contact_details_work"
        android:text="@string/contact_details_work"/>

    <TextView
        android:id="@+id/type_mobile"
        style="@style/phone_type_spinner"
        android:contentDescription="@string/contact_details_mobile"
        android:text="@string/contact_details_mobile"/>

    <TextView
        android:id="@+id/type_home"
        style="@style/phone_type_spinner"
        android:contentDescription="@string/contact_details_home"
        android:text="@string/contact_details_home"/>

    <TextView
        android:id="@+id/type_fax"
        style="@style/phone_type_spinner"
        android:contentDescription="@string/contact_details_fax"
        android:text="@string/contact_details_fax"/>

    <TextView
        android:id="@+id/type_pager"
        style="@style/phone_type_spinner"
        android:contentDescription="@string/contact_details_pager"
        android:text="@string/contact_details_pager"/>

    <TextView
        android:id="@+id/type_other"
        style="@style/phone_type_spinner"
        android:contentDescription="@string/contact_details_other"
        android:text="@string/contact_details_other"/>
</LinearLayout>