<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/AppThemeNoBackground"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:focusable="false"
    android:background="@color/colorActiveCallBG">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/menus_layouts"
        android:layout_marginTop="@dimen/margin_xlarge">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transfer_call_title"
        android:textSize="22sp"
        android:padding="16dp"
        android:textColor="@color/colorActiveCallDialpadBG"
        android:text="@string/transfer_dialog_title" />

    <TextView
        android:id="@+id/contact_transfer"
        style="@style/dialog_call_text_style"
        android:drawableStart="@drawable/ic_choose_a_person"
        android:text="@string/transfer_dialog_choose_contact"
        android:contentDescription="@string/transfer_dialog_choose_contact"/>

    <TextView
        android:id="@+id/dialer_transfer"
        style="@style/dialog_call_text_style"
        android:drawableStart="@drawable/ic_dialpad_grey24"
        android:text="@string/transfer_dialog_enter_number"
        android:contentDescription="@string/transfer_dialog_enter_number"/>
    </LinearLayout>
    <include
        layout="@layout/exit_button_layout" />
</FrameLayout>