<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppThemeNoBackground"
    android:background="@color/colorControlDisable">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/quick_tutorial"
        android:src="@drawable/tutorial_1_k155"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/tutorialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:text="@string/tutorialBlockCamera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/image1"
        app:layout_constraintTop_toTopOf="@+id/image1"
        app:layout_constraintVertical_bias="0.089999974" />

    <TextView
        android:id="@+id/text2"
        style="@style/tutorialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorialMute"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image1"
        app:layout_constraintHorizontal_bias="0.900"
        app:layout_constraintStart_toStartOf="@+id/image1"
        app:layout_constraintTop_toTopOf="@+id/image1"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        style="@style/tutorialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorialVolume"
        app:layout_constraintBottom_toBottomOf="@+id/image1"
        app:layout_constraintEnd_toEndOf="@+id/image1"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="@+id/image1"
        app:layout_constraintTop_toTopOf="@+id/image1"
        app:layout_constraintVertical_bias="0.45999998" />

    <TextView
        style="@style/tutorialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorialTransducerSelection"
        app:layout_constraintBottom_toBottomOf="@+id/image1"
        app:layout_constraintEnd_toEndOf="@+id/image1"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="@+id/image1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        style="@style/tutorialText.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_tutorial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image1"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>